Create TodoMVC.TodoList and adjust some files

--- a/index.html
+++ b/index.html
@@ -61,5 +61,10 @@
     <script src="js/TodoMVC.Layout.js"></script>
     <script src="js/TodoMVC.TodoList.Views.js"></script>
     <script src="js/TodoMVC.TodoList.js"></script>
+    <script>
+      $(function () {
+          TodoMVC.start();
+      });
+    </script>
   </body>
 </html>
